--- a/DemoHelloPayTest/pom.xml
+++ b/DemoHelloPayTest/pom.xml
@@ -47,8 +47,27 @@
             <artifactId>oracle-tools-all</artifactId>
             <version>1.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.12</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.12</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
 
     </dependencies>
+    <!--<properties>-->
+        <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+        <!--<maven.compiler.source>1.7</maven.compiler.source>-->
+        <!--<maven.compiler.target>1.7</maven.compiler.target>-->
+    <!--</properties>-->
     <build>
         <plugins>
             <plugin>
@@ -58,6 +77,7 @@
         <configuration>
             <suiteXmlFiles>
                 <suiteXmlFile>setting/testng/demo.xml</suiteXmlFile>
+                <!--<outputDirectory>${basedir}/target/surefire-reports</outputDirectory>-->
             </suiteXmlFiles>
         </configuration>
             </plugin>
