--- a/DemoHelloPayTest/pom.xml
+++ b/DemoHelloPayTest/pom.xml
@@ -62,6 +62,24 @@
             <type>jar</type>
         </dependency>
 
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+        </dependency>
+
+
+
     </dependencies>
     <!--<properties>-->
         <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
